overflow hidden fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -128,7 +128,7 @@ h1.home {
 #mainColumn
 {
 	width: 80%;
-	overflow: hidden;
+	overflow-x: hidden;
 	::-webkit-scrollbar { 
     display: none; 
 	}
